--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -147,21 +147,12 @@
                                                                        name="Password" th:value="${user.password}">
                                                             </div>
                                                             <div class="form-group text-center">
-                                                                <b><label for="role">Role</label></b>
-                                                                <br>
-<!--                                                                <select class="form-control" multiple name="role"-->
-<!--                                                                        id="role"-->
-<!--                                                                        size="2">-->
-<!--                                                                    <option value="1">ADMIN</option>-->
-<!--                                                                    <option selected value="2">USER </option>-->
-<!--                                                                </select>-->
-                                                                <label><b>Role</b></label>
-                                                                <input th:type="checkbox" th:id="2" th:name="ADMIN"
-                                                                       th:value="ADMIN">
-                                                                <label th:for="ADMIN">Admin</label>
-                                                                <input th:type="checkbox" th:id="1" th:name="USER"
-                                                                       th:value="USER">
-                                                                <label th:for="USER">User</label>
+                                                                <label for="role">Role</label>
+                                                                <select class="form-select w-100" size="2" id="role"
+                                                                        name="checkBoxRoles">
+                                                                    <option th:each="role : ${roles}"
+                                                                            th:text="${role.name}"></option>
+                                                                </select>
                                                                 <br><br>
                                                             </div>
                                                             <div class="modal-footer">
@@ -258,18 +249,16 @@
                                                                        readonly="readonly">
                                                             </div>
                                                             <div class="form-group text-center">
-                                                                <label for="roles2" class="center-block">
+                                                                <label for="role2" class="center-block">
                                                                     <span class="font-weight-bold">Role</span>
                                                                 </label>
-                                                                <select id="roles2" class="form-control custom-select" size="2"
-                                                                        th:name="role"
-                                                                        multiple="multiple" readonly="readonly">
-                                                                    <option value="1" readonly="readonly">ADMIN</option>
-                                                                    <option  selected value="2" readonly="readonly">USER </option>
-                                                                </select>
-                                                                <input name="id" type="hidden"
-                                                                       th:value="${user.id}">
+                                                                <input type="role"
+                                                                       class="form-control text-center"
+                                                                       id="role2"
+                                                                       name="Role" th:value="${user.getStringRoles()}"
+                                                                       readonly="readonly">
                                                             </div>
+
                                                             <div class="modal-footer">
                                                                 <button type="button" class="btn btn-secondary"
                                                                         data-dismiss="modal">
@@ -326,12 +315,11 @@
                                                        placeholder="Enter your password" required>
                                             </div>
                                             <div>
-                                                <label for="role" class=" font-weight-bold">Roles:</label>
-                                                <select class="form-control custom-select" size="2" id="role"
-                                                        th:name="role"
-                                                        multiple="multiple">
-                                                    <option value="1">ADMIN</option>
-                                                    <option selected value="2">USER</option>
+                                                <label for="role">Role</label>
+                                                <select class="form-select w-100" size="2" id="role3"
+                                                        name="checkBoxRoles">
+                                                    <option th:each="role : ${roles}"
+                                                            th:text="${role.name}"></option>
                                                 </select>
                                             </div>
                                             <br>
