--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -146,14 +146,13 @@
                                                                        id="password1"
                                                                        name="Password" th:value="${user.password}">
                                                             </div>
-                                                            <div class="form-group text-center">
-                                                                <label for="role">Role</label>
-                                                                <select class="form-select w-100" size="2" id="role"
-                                                                        name="checkBoxRoles">
+                                                            <div>
+                                                                <label for="role1" class=" font-weight-bold">Roles:</label>
+                                                                <select class="form-select w-100" size="3" id="role1"
+                                                                        name="rolesBox">
                                                                     <option th:each="role : ${roles}"
                                                                             th:text="${role.name}"></option>
                                                                 </select>
-                                                                <br><br>
                                                             </div>
                                                             <div class="modal-footer">
                                                                 <button type="button" class="btn btn-secondary"
@@ -315,13 +314,22 @@
                                                        placeholder="Enter your password" required>
                                             </div>
                                             <div>
-                                                <label for="role">Role</label>
-                                                <select class="form-select w-100" size="2" id="role3"
-                                                        name="checkBoxRoles">
+                                                <label for="role" class=" font-weight-bold">Roles:</label>
+                                                <select class="form-select w-100" size="3" id="role"
+                                                        name="rolesBox">
                                                     <option th:each="role : ${roles}"
                                                             th:text="${role.name}"></option>
                                                 </select>
                                             </div>
+<!--                                            <div>-->
+<!--                                                <label for="role" class=" font-weight-bold">Roles:</label>-->
+<!--                                                <select class="form-control custom-select" size="2" id="role"-->
+<!--                                                        th:name="role"-->
+<!--                                                        multiple="multiple">-->
+<!--                                                    <option value="1">ADMIN</option>-->
+<!--                                                    <option selected value="2">USER</option>-->
+<!--                                                </select>-->
+<!--                                            </div>-->
                                             <br>
                                             <div>
                                                 <button type="submit" class="btn btn-success ">Add new user</button>
